--- a/index.css
+++ b/index.css
@@ -9,15 +9,164 @@
 body{
     background: #3F5EFB;
     background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
-    padding: 0 20px 50px;
+    padding: 0 10px 50px;
     font-family: "Manrope", sans-serif;
     line-height: 1.6;
     text-align: center;
     font-size: 18px;
     color: #333;
+    overflow-x: hidden;
+    width: 100%;
 }
+a{
+    color: #111;
+    transition: all 300ms ease-out;
+}
+a:hover{
+    color: #ddd;
+}
+.navicon,
+.totop{
+  z-index: 90;
+  transition: all 300ms linear;
+  width: 60px;
+  height: 50px;
+  overflow: hidden;
+  cursor: pointer;
+  position: fixed;
+  right: 0;
+  background-color: rgba(63, 94, 251, 0.8);
+  border: none;
+}
+.navicon{
+  top: 0;
+}
+.navicon:hover,
+.totop:hover{
+  background-color: rgba(63, 94, 251, 1);
+}
+.opennav .navicon{
+  background-color: transparent;
+}
+.navicon::before,
+.navicon::after{
+  content: " ";
+}
+.navicon::before,
+.navicon::after,
+.navicon span{
+  position: absolute;
+  display: block;
+  left: 20%;
+  width: 60%;
+  height: 3px;
+  transition: all 500ms ease-out;
+  background-color: #fff;
+}
+.navicon::before{
+  top: 22%;
+}
+.navicon span{
+  top: 45%;
+}
+.navicon::after{
+  top: 68%;
+}
+.opennav .navicon{
+  background-color: rgba(63, 94, 251, 0);
+}
+.opennav .navicon::after,
+.opennav .navicon::before{
+  top: 25%;
+  left: 47%;
+  width: 3px;
+  height: 50%;
+  transform: rotate(45deg);
+  transform-origin: center center;
+  background-color: #fff;
+}
+.opennav .navicon::after{
+  transform: rotate(-45deg);
+}
+.opennav .navicon::before{
+  transform: rotate(45deg);
+}
+.opennav .navicon span{
+  width: 0;
+}
+.opennav .navwrap{
+  right: 0;
+}
+
+header nav{
+    position: fixed;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    width: 230px;
+    transition: all 300ms ease-out;
+    background-color: #3F5EFB;
+    padding: 50px 20px 20px;
+    z-index: 5;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+}
+.opennav nav{
+    transform: translateX(0);
+}
+header nav ul{
+    list-style: none;
+}
+header nav a{
+    display: block;
+    color: #fff;
+    text-decoration: none;
+}
+.menu a{
+    padding: 5px 0;
+    font-size: 1.1rem;
+}
+.social-links{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+.social-links a{
+  display: block;
+  width: 30px;
+  height: 30px;
+  color: transparent !important;
+  overflow: hidden;
+  background-image: url(socials.svg);
+  background-repeat: no-repeat;
+  background-position: 0 center;
+  margin: 0 5px;
+  border-radius: 50%;
+  opacity: 0.7;
+}
+.social-links a:hover{
+  opacity: 1;
+}
+.social-links a[href*="facebook"]{
+  background-position: left center;
+}
+.social-links a[href*="linked"]{
+  background-position: -30px center;
+}
+.social-links a[href*="youtube"]{
+  background-position: -60px center;
+}
+.social-links a[href*="instagram"]{
+  background-position: -90px center;
+}
+.social-links a[href^="mailto:"]{
+  background-position: -150px center;
+}
+.social-links a[href*="maps"]{
+  background-position: right center;
+}
+
+
 main{
-    min-height: calc(100vh - 55px);
     position: relative;
     padding-top: 50px;
     padding-bottom: 100px;
@@ -36,42 +185,31 @@ section{
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
     position: relative;
 }
-a{
-    color: #111;
-    transition: all 300ms ease-out;
-}
-a:hover{
-    color: #ddd;
-}
 
 .fly-logo-container {
-  position: relative; /* To position the speech balloon relative to it */
   display: inline-block; /* Adjust as needed for your layout */
 }
-
 .fly-logo {
   animation: flyAnimation 5s infinite alternate;
   position: relative; /* Still needed for the fly animation */
   cursor: pointer; /* Indicate it's clickable */
 }
-
 .speech-balloon {
+  line-height: 1.2;
   position: absolute;
   background-color: #fff;
   color: #000;
   border: 2px solid #000;
   border-radius: 10px;
   padding: 10px;
-  font-size: 14px;
-  white-space: nowrap; /* Prevent text from wrapping */
-  bottom: 100%; /* Position above the image */
+  font-size: 0.8rem;
+  top: 10px; /* Position above the image */
   left: 50%;
   transform: translateX(-50%); /* Center above and add a small gap */
   opacity: 0; /* Initially hidden */
   visibility: hidden; /* Initially hidden */
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; /* Smooth appearance */
 }
-
 .speech-balloon::after {
   content: '';
   position: absolute;
@@ -82,7 +220,6 @@ a:hover{
   border-style: solid;
   border-color: #fff transparent transparent transparent;
 }
-
 .speech-balloon::before {
   content: '';
   position: absolute;
@@ -93,7 +230,6 @@ a:hover{
   border-style: solid;
   border-color: #000 transparent transparent transparent;
 }
-
 .fly-logo-container.clicked .speech-balloon {
   opacity: 1;
   visibility: visible;
@@ -131,7 +267,7 @@ h1{
 
 h2{
     margin-bottom: 20px;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
 }
 .txt{
     font-size: 1.3rem;
@@ -145,7 +281,7 @@ form{
 form input,
 form select,
 form button{
-    display: block;
+    display: inline-block;
     border: none;
     font-size: inherit;
     background-color: #fff;
@@ -188,6 +324,9 @@ form button:active {
 #input-date-wrap{
     position: relative;
 }
+#monthDay{
+    width: 80px;
+}
 #validationError{
     position: absolute;
     color: #EB99CF;
@@ -201,27 +340,6 @@ button:disabled{
     opacity: 0.5;
     cursor: not-allowed;
 }
-.more{
-    text-align: center;
-    font-size: 0.8rem;
-    padding-bottom: 30px;
-    width: 100%;
-    cursor: pointer;
-}
-.more span{
-    display: block;
-}
-.more .material-symbols-outlined{
-    transform: translateY(0);
-}
-.more:hover .material-symbols-outlined{
-    transform: translateY(3px);
-}
-.scrolled .more{
-    opacity: 0;
-    pointer-events: none;
-}
-
 footer{
     font-size: 0.8rem;
     text-align: center;
@@ -232,71 +350,50 @@ footer > p:not(:last-child){
     margin-bottom: 10px;
 }
 
+/* totop */
+.totop{
+  bottom: -50px;
+}
+.totop::after{
+  content: " ";
+  display: block;
+  clip-path: polygon(0% 14%, 14% 7%, 100% 50%, 13% 93%, 0% 86%, 73% 50%);
+  position: absolute;
+  top: 50%;
+  transition: all 300ms linear;
+  width: 18px;
+  height: 36px;
+  background-color: #fff;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-90deg);
+}
+.scrolled .totop{
+  bottom: 0;
+}
+
 @media screen and (max-width: 900px){
     body{
         font-size: 15px;
     }
-    .container{
-        padding-left: 20px;
-        padding-right: 20px;
+    main{
+        margin-bottom: 50px;
     }
-}
-@media screen and (max-width: 700px){
-    .container{
-        padding-top: 30px;
-        padding-bottom: 30px;
-    }
-    h1{
-        font-size: 1.2rem;
-    }
-    form{
-        display: block;
-        text-align: center;
-        max-width: 200px;
-        margin: 0 auto;
-    }
-    form > div{
-       margin: 10px 0;
-    }
-    form input, form select, form button{
-        width: 100%;
-        text-align: center;
-    }
-    form input[type="color"]{
-        margin-left: auto;
-        margin-right: auto;
-    }
-    #hexError{
-        position: static;
-        transform: none;
-    }
-    .color-list > li{
-        width: 50%;
-        margin-top: 30px;
-    }
-    .color-list > li > div:nth-child(2){
-        height: calc((100vw - 80px) / 2);
-    }
-    .color-list > li > div:nth-child(3), 
-    .color-list > li > div:nth-child(4){
-        padding: 5px 0 0;
-    }
-    .color-list > li > h2{
-        margin-bottom: 5px;
-    }
-    #hexcopy{
-        display: none;
+    section{
+        margin-top: 50px;
     }
 }
 @media screen and (max-width: 400px){
-   body, .container{
-    padding-left: 10px;
-    padding-right: 10px;
-   } 
-   .color-list > li > div:nth-child(2){
-        height: calc((100vw - 40px) / 2);
+    .speech-balloon{
+        width: 100%;
+        left: 0;
+        transform: none;
+        font-size: 0.6rem;
     }
-    .more{
-        display: none;
+    .navicon, .totop{
+        width: 50px;
+        height: 40px;
+    }
+    .wrapper{
+        padding: 30px 10px;
     }
 }
